--- a/authors.tex
+++ b/authors.tex
@@ -1,4 +1,4 @@
-\author{Anisha Keshavan}
+\author[1]{Anisha Keshavan}
 \author[2]{Friedmann Paul}
 \author[3]{Mona Beyer}
 \author[1]{Alyssa Zhu}
@@ -42,3 +42,21 @@
 \author[1]{Stephen Hauser}
 \author[1]{Jorge Oksenberg}
 \author[1]{Roland Henry}
+
+\affil[1]{Neurology, UCSF, San Francisco, CA} 
+\affil[2]{Charite Universitatsmedizin, Germany}
+\affil[3]{Oslo University Hospital, Norway}
+\affil[4]{Brigham and Women's Hospital, MA, United States}
+\affil[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
+\affil[6]{Eastern Piedmont University, Novara, Italy}
+\affil[7]{KU Leuven, Leuven, Belgium}
+\affil[8]{Scientific Institute Ospedale San Raffaele, Italy}
+\affil[9]{Hôpital Pitié-Salpêtrière, Paris, France}
+\affil[10]{Klinik und Poliklinik für Neurologie, Mainz, Germany}
+\affil[11]{Yale University, CT, United States}
+\affil[12]{Technische Universität München, Munich, Germany}
+\affil[13]{University Hospital, Basel, Switzerland}
+\affil[14]{IDIBAPS, Barcelona, Spain}
+\affil[15]{University of Miami, Miami, USA}
+\affil[16]{Academic Hospital Vrije Universiteit, Netherlands}
+\affil[17]{International Multiple Sclerosis Genetics Consortium}
