--- a/authors.tex
+++ b/authors.tex
@@ -1,7 +1,7 @@
-Anisha Keshavan\footnote[1]{Neurology, UCSF, San Francisco, CA},
-Friedmann Paul\footnote[2]{Charite Universitatsmedizin, Germany},
-Mona Beyer\footnote{3},
-Alyssa Zhu\footnote[1],
+Anisha Keshavan\footnote{Neurology, UCSF, San Francisco, CA},
+Friedmann Paul\footnote{Charite Universitatsmedizin, Germany},
+Mona Beyer\footnote{Oslo University Hospital, Norway},
+Alyssa Zhu\footnote{Neurology, UCSF, San Francisco, CA},
 %alphabetical
 \author[4]{Rohit Bakshi}
 \author[1]{Antje Bischof}
