--- a/authors.tex
+++ b/authors.tex
@@ -1,62 +1,44 @@
-Anisha Keshavan\footnote{Neurology, UCSF, San Francisco, CA},
-Friedmann Paul\footnote{Charite Universitatsmedizin, Germany},
-Mona Beyer\footnote{Oslo University Hospital, Norway},
-Alyssa Zhu\footnote{Neurology, UCSF, San Francisco, CA},
+Anisha Keshavan\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Friedmann Paul\footnote[2]{Charite Universitatsmedizin, Germany},
+Mona Beyer\footnote[3]{Oslo University Hospital, Norway},
+Alyssa Zhu\footnote[1]{Neurology, UCSF, San Francisco, CA},
 %alphabetical
-\author[4]{Rohit Bakshi}
-\author[1]{Antje Bischof}
-\author[5]{Manuel Comabella}
-\author[6]{Sandra D’Alfonso}
-\author[7]{Benedicte Dubois}
-\author[8]{Massimo Filippi}
-\author[9]{Bertrand Fontaine}
-\author[7]{Ann Goris}
-\author[10]{Sergiu Groppa}
-\author[11]{David Hafler}
-\author[3]{Hanne Harbo}
-\author[12]{Bernhard Hemmer}
-\author[1]{Kesshi Jordan}
-\author[13]{Ludwig Kappos}
-\author[1]{Gina Kirkish}
-\author[14]{Sara Llufriu}
-\author[8]{Filippo Martinelli-Boneschi}
-\author[15]{Jacob McCauley}
-\author[5]{Xavier Montalban}
-\author[12]{Mark Muhlau}
-\author[1]{Nico Papinutto}
-\author[11]{Daniel Pelletier} %somewhere else
-\author[15]{Margaret Pericak-Vance}
-\author[9]{Isabelle Rebeix}
-\author[8]{Maria Rocca}
-\author[5]{Alex Rovira}
-\author[1]{Regina Schlaeger}
-\author[13]{Till Sprenger} %somewhere else
-\author[1]{William Stern}
-\author[16]{Bernard Uitdehaag}
-\author[14]{Pablo Villoslada}
-\author[4]{Howard Weiner}
-\author[2]{Jens Wurfel}
-\author[10]{Frauke Zipp}
+Rohit Bakshi\footnote[4]{Brigham and Women's Hospital, MA, United States},
+Antje Bischof\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Manuel Comabella\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
+Sandra D’Alfonso\footnote[6]{Eastern Piedmont University, Novara, Italy},
+Benedicte Dubois\footnote[7]{KU Leuven, Leuven, Belgium}
+Massimo Filippi\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
+Bertrand Fontaine\footnote[9]{Hôpital Pitié-Salpêtrière, Paris, France}
+Ann Goris\footnote[7]{KU Leuven, Leuven, Belgium}
+Sergiu Groppa\footnote[10]{Klinik und Poliklinik für Neurologie, Mainz, Germany}
+David Hafler\footnote[11]{Yale University, CT, United States}
+Hanne Harbo\footnote[3]{Oslo University Hospital, Norway},
+Bernhard Hemmer\footnote[12]{Technische Universität München, Munich, Germany}
+Kesshi Jordan\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Ludwig Kappos\footnote[13]{University Hospital, Basel, Switzerland}
+Gina Kirkish\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Sara Llufriu\footnote[14]{IDIBAPS, Barcelona, Spain}
+Filippo Martinelli-Boneschi\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
+Jacob McCauley\footnote[15]{University of Miami, Miami, USA}
+Xavier Montalban\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
+Mark Muhlau\footnote[12]{Technische Universität München, Munich, Germany}
+Nico Papinutto\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Daniel Pelletier\footnote[11]{Yale University, CT, United States}
+Margaret Pericak-Vance\footnote[15]{University of Miami, Miami, USA}
+Isabelle Rebeix\footnote[9]{Hôpital Pitié-Salpêtrière, Paris, France}
+Maria Rocca\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
+Alex Rovira\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
+Regina Schlaeger\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Till Sprenger\footnote[13]{University Hospital, Basel, Switzerland}
+William Stern\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Bernard Uitdehaag\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands}
+Pablo Villoslada\footnote[14]{IDIBAPS, Barcelona, Spain}
+Howard Weiner\footnote[4]{Brigham and Women's Hospital, MA, United States},
+Jens Wurfel\footnote[2]{Charite Universitatsmedizin, Germany},
+Frauke Zipp\footnote[10]{Klinik und Poliklinik für Neurologie, Mainz, Germany},
 %last and not alphabetical
-\author[17]{International Multiple Sclerosis Genetics Consortium}
-\author[1]{Stephen Hauser}
-\author[1]{Jorge Oksenberg}
-\author[1]{Roland Henry}
-
-\affil[1]{Neurology, UCSF, San Francisco, CA} 
-\affil[2]{Charite Universitatsmedizin, Germany}
-\affil[3]{Oslo University Hospital, Norway}
-\affil[4]{Brigham and Women's Hospital, MA, United States}
-\affil[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
-\affil[6]{Eastern Piedmont University, Novara, Italy}
-\affil[7]{KU Leuven, Leuven, Belgium}
-\affil[8]{Scientific Institute Ospedale San Raffaele, Italy}
-\affil[9]{Hôpital Pitié-Salpêtrière, Paris, France}
-\affil[10]{Klinik und Poliklinik für Neurologie, Mainz, Germany}
-\affil[11]{Yale University, CT, United States}
-\affil[12]{Technische Universität München, Munich, Germany}
-\affil[13]{University Hospital, Basel, Switzerland}
-\affil[14]{IDIBAPS, Barcelona, Spain}
-\affil[15]{University of Miami, Miami, USA}
-\affil[16]{Academic Hospital Vrije Universiteit, Netherlands}
-\affil[17]{International Multiple Sclerosis Genetics Consortium}
+International Multiple Sclerosis Genetics Consortium,
+Stephen Hauser\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Jorge Oksenberg\footnote[1]{Neurology, UCSF, San Francisco, CA},
+Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
