--- a/Table_reftabcva_show.tex
+++ b/Table_reftabcva_show.tex
@@ -1,1 +1,1 @@
-Table \ref{tab:cva} shows the scaling factor variability ($CV_{\alpha}$) for the selected ROIs, which range from 2 to 6 \%. The full distribution of $CV_{\alpha}$ for all the Freesurfer ROIs is shown in Figure \ref{fig:cv_j}. To derive the maximum acceptable $CV_{\alpha}$ for 80\% power, the theoretical power equation was solved at various subject and site sample sizes with the standardized effect size we detected in the EPIC cohort (0.19). The distribution of $CV_{\alpha}$ across all ROIs was plotted adjacent to the power curves (Figure \ref{fig:cv_j}) to understand how many ROIs would need to be calibrated for each case. Finally, figures \ref{fig:hcms_scGMV}, \ref{fig:hcms_GMV}, and \ref{fig:hcms_WMV} show the scaling factors from the calibration between two scanners with different sequences at UCSF. Scaling factors derived from the healthy controls (HC) and multiple sclerosis (MS) subjects were identical for subcortical gray matter volume (1.05) and very similar for gray matter volume (1, 1.002 for HC, MS) and white matter volume (.967, .975 for HC, MS).
+Table \ref{tab:cva} shows the scaling factor variability ($CV_{\alpha}$) for the selected ROIs, which range from 2 to 6 \%. The full distribution of $CV_{\alpha}$ for all the Freesurfer ROIs is shown in Figure \ref{fig:cv_j}. To derive the maximum acceptable $CV_{\alpha}$ for 80\% power, the theoretical power equation was solved at various subject and site sample sizes with the standardized effect size we detected in our local single center cohort (0.19). The distribution of $CV_{\alpha}$ across all ROIs was plotted adjacent to the power curves (Figure \ref{fig:cv_j}) to understand how many ROIs would need to be calibrated for each case. Finally, figures \ref{fig:hcms_scGMV}, \ref{fig:hcms_GMV}, and \ref{fig:hcms_WMV} show the scaling factors from the calibration between two scanners with different sequences at UCSF. Scaling factors derived from the healthy controls (HC) and MS subjects were identical for subcortical gray matter volume (1.05) and very similar for gray matter volume (1, 1.002 for HC, MS) and white matter volume (.967, .975 for HC, MS).
