--- a/figures/cva_J/caption.tex
+++ b/figures/cva_J/caption.tex
@@ -1,1 +1,1 @@
-\label{fig:cv_j} Lowest acceptable CVa for 80\% power, fpr = 0.002 
+\label{fig:cv_j} Shows power curves for 80\% power for 2175 - 3000 total subjects. The lowest point of each curves shows the minimum number of sites required for a set number of subjects on the x-axis and the y axis corresponds to the maximum acceptable $CV_{\alpha}$ for that case. On the right-hand side, the distribution of $CV_{\alpha}$ values across all sites and all Freesurfer ROIs. In general, all the $CV_{\alpha}$ fall below 10\%. This means that for the curves where the total number of subjects is less than 2300, ROIs must be carefully chosen and calibrated to 
