--- a/authors.tex
+++ b/authors.tex
@@ -32,9 +32,10 @@ Isabelle Rebeix\footnote[9]{Hôpital Pitié-Salpêtrière, Paris, France}
 Maria Rocca\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
 Alex Rovira\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
 Regina Schlaeger\footnote[1]{Neurology, UCSF, San Francisco, CA},
-Till Sprenger\footnote[13]{University Hospital, Basel, Switzerland}
-Bernard Uitdehaag\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands}
-Pablo Villoslada\footnote[14]{IDIBAPS, Barcelona, Spain}
+Till Sprenger\footnote[13]{University Hospital, Basel, Switzerland},
+Bernard Uitdehaag\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
+Pablo Villoslada\footnote[14]{IDIBAPS, Barcelona, Spain},
+Mike Wattjies\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
 Howard Weiner\footnote[4]{Brigham and Women's Hospital, MA, United States},
 Jens Wurfel\footnote[2]{Charite Universitatsmedizin, Germany},
 Frauke Zipp\footnote[10]{Klinik und Poliklinik für Neurologie, Mainz, Germany},
