--- a/authors.tex
+++ b/authors.tex
@@ -6,6 +6,7 @@ Alyssa Zhu\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Nico Papinutto\footnote[1]{Neurology, UCSF, San Francisco, CA},
 William Stern\footnote[1]{Neurology, UCSF, San Francisco, CA},
 %alphabetical
+Michael Amann\footnote[13]{University Hospital, Basel, Switzerland},
 Rohit Bakshi\footnote[4]{Brigham and Women's Hospital, MA, United States},
 Antje Bischof\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Manuel Comabella\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
@@ -14,6 +15,7 @@ Benedicte Dubois\footnote[7]{KU Leuven, Leuven, Belgium}
 Massimo Filippi\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
 Bertrand Fontaine\footnote[9]{Hôpital Pitié-Salpêtrière, Paris, France}
 Ann Goris\footnote[7]{KU Leuven, Leuven, Belgium}
+Laura Gaetano\footnote[13]{University Hospital, Basel, Switzerland},
 Sergiu Groppa\footnote[10]{Klinik und Poliklinik für Neurologie, Mainz, Germany}
 David Hafler\footnote[11]{Yale University, CT, United States}
 Hanne Harbo\footnote[3]{Oslo University Hospital, Norway},
@@ -22,6 +24,7 @@ Kesshi Jordan\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Ludwig Kappos\footnote[13]{University Hospital, Basel, Switzerland}
 Gina Kirkish\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Sara Llufriu\footnote[14]{IDIBAPS, Barcelona, Spain}
+Stefano Magon\footnote[13]{University Hospital, Basel, Switzerland},
 Filippo Martinelli-Boneschi\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
 Jacob McCauley\footnote[15]{University of Miami, Miami, USA}
 Xavier Montalban\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
