--- a/authors.tex
+++ b/authors.tex
@@ -53,7 +53,10 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 \author[2]{Friedmann Paul}
 \author[3]{Mona Beyer}
 \author[1]{Alyssa Zhu}
+\author[1]{Nico Papinutto}
+\author[1]{William Stern}
 %alphabetical
+\author[13]{Michael Aman}
 \author[4]{Rohit Bakshi}
 \author[1]{Antje Bischof}
 \author[5]{Manuel Comabella}
@@ -62,6 +65,7 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 \author[8]{Massimo Filippi}
 \author[9]{Bertrand Fontaine}
 \author[7]{Ann Goris}
+\author[13]{Laura Gaetano}
 \author[10]{Sergiu Groppa}
 \author[11]{David Hafler}
 \author[3]{Hanne Harbo}
@@ -70,11 +74,11 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 \author[13]{Ludwig Kappos}
 \author[1]{Gina Kirkish}
 \author[14]{Sara Llufriu}
+\author[13]{Stefano Magon}
 \author[8]{Filippo Martinelli-Boneschi}
 \author[15]{Jacob McCauley}
 \author[5]{Xavier Montalban}
 \author[12]{Mark Muhlau}
-\author[1]{Nico Papinutto}
 \author[11]{Daniel Pelletier} %somewhere else
 \author[15]{Margaret Pericak-Vance}
 \author[9]{Isabelle Rebeix}
@@ -82,9 +86,9 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 \author[5]{Alex Rovira}
 \author[1]{Regina Schlaeger}
 \author[13]{Till Sprenger} %somewhere else
-\author[1]{William Stern}
 \author[16]{Bernard Uitdehaag}
 \author[14]{Pablo Villoslada}
+\author[13]{Mike Wattjies}
 \author[4]{Howard Weiner}
 \author[2]{Jens Wurfel}
 \author[10]{Frauke Zipp}
