--- a/subsectionProcessing.tex
+++ b/subsectionProcessing.tex
@@ -1,2 +1,2 @@
 \subsection{Processing}
- A neuroradiologist reviewed all images to screen for major artifacts and pathology. The standard Freesurfer\cite{freesurferPaper} version 5.3.0 pipeline was run on each site's native T1-weighted protocol, using the RedHat 7 operating system. All Freesurfer results were quality controlled by evaluating the cortical gray matter segmentation. Scans were excluded from the study if the cortical gray matter segmentation missclassified parts of the cortex.
+ A neuroradiologist reviewed all images to screen for major artifacts and pathology. The standard Freesurfer\cite{freesurferPaper} version 5.3.0 pipeline was run on each site's native T1-weighted protocol, using the RedHat 7 operating system. All Freesurfer results were quality controlled by evaluating the cortical gray matter segmentation. Scans were excluded from the study if the cortical gray matter segmentation missclassified parts of the cortex. \textit{(I would suggest mentioning here how many scans were excluded affecting how many subjects)}\textbf{}
