--- a/Finally_to_address_t.tex
+++ b/Finally_to_address_t.tex
@@ -1,1 +1,1 @@
-Finally, to address the concern about whether these scaling factors could apply to a disease population, we calculated scaling factors from 12 healthy controls and 12 MS patients between 2 scanners at UCSF. Because MS patients have lesions that could affect Freesurfer's tissue classification, all images were manually corrected for lesions and were edited following Freesurfer's quality assurance procedure. Images that were still missclassified after thorough edits were removed from the analysis, because calibration factors need to be calculated from accurate segmentations.
+Finally, to address the concern about whether these scaling factors could apply to a disease population, we calculated scaling factors from 12 healthy controls and 12 MS patients between 2 scanners at UCSF \textit{(I would suggest providing a summary of basic details here about the MS patients - e.g. age, sex, disease duration, type of MS, disability score).}\textbf{} Because MS patients have lesions that could affect Freesurfer's tissue classification, all images were manually corrected for lesions and were edited following Freesurfer's quality assurance procedure. Images that were still missclassified after thorough edits were removed from the analysis, because calibration factors need to be calculated from accurate segmentations.
