--- a/tab_acquisition1.tex
+++ b/tab_acquisition1.tex
@@ -25,7 +25,7 @@ Hippocampus                   &   0.83 &   0.87 &   0.95 &   0.98 &             
 Thalamus-Proper               &   0.93 &   0.87 &   0.93 &   0.92 &                  0.87 &   0.87 &                  0.87 &   0.95 &   0.95 \\
 \bottomrule
 \end{tabular}
-\caption{Top: Acquisition parameters for 10 out of 19 scanners. Si = Siemens, Ph = Phillips. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer.}
+\caption{Top: Acquisition parameters for 10 out of 19 scanners. Si = Siemens, Ph = Phillips. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer.} \textit{(I would suggest adding the city/location of each scanner)}\textbf{}
 \label{tab:acquisition1}
 
 \end{table}
