--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -25,7 +25,7 @@ Hippocampus                   &   0.98 &   0.99 &   0.68 &   0.94 &   0.96 &   0
 Thalamus-Proper               &    0.9 &   0.96 &   0.88 &   0.99 &   0.88 &   0.84 &   0.94 &    0.9 &   0.58 &   0.62 \\
 \bottomrule
 \end{tabular}
-\caption{Top: Acquisition parameters for 9 of the 19 scanners. Si = Siemens, Ph = Phillips. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer.}
+\caption{Top: Acquisition parameters for 9 of the 19 scanners. Si = Siemens, Ph = Phillips. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer.} \textbf{(Same comment as Table 1)}\textit{}
 \label{tab:acquisition2}
 
 \end{table}
