--- a/tab_cva.tex
+++ b/tab_cva.tex
@@ -19,6 +19,6 @@ Thalamus-Proper               &  0.05 \\
 \bottomrule
 \end{tabular}
 \caption{$CV_{\alpha}$ values for selected ROIs}
-\label{tab:cva} \textbf{(I would suggest defining the abbreviation CV)}\textit{}
+\label{tab:cva} \textbf{(I would suggest defining the abbreviation CV - also define all abbreviations used in figures and tables in the legend/key for each)}\textit{}
 
 \end{table}
