--- a/beginequation_CV_alp.tex
+++ b/beginequation_CV_alp.tex
@@ -1,3 +1,3 @@
 \begin{equation}
-CV_{\alpha} = \frac{std(\hat{\beta})}{mean(\hat{\beta})}
+CV_{\alpha} = \frac{std(\hat{\alpha})}{mean(\hat{\alpha})}
 \end{equation}
