--- a/tab_acquisition1.tex
+++ b/tab_acquisition1.tex
@@ -5,6 +5,8 @@
 \toprule
 {} &      1 &      2 &      3 &      4 &                     5 &      6 &                     7 &      8 &      9 \\
 \midrule
+Location & ams & bas & bas & bas & bcn & ber & bwh & bwh & hvn\\
+\midrule
 TR                            &      8 &   2080 &   2300 &   2300 &                  1800 &   1900 &                     8 &   2300 &   2000 \\
 TE                            &    3.2 &    3.1 &      3 &      3 &                     3 &      3 &                   3.9 &      3 &    3.2 \\
 Strength                      &      3 &    1.5 &      3 &      3 &                     3 &      3 &                   1.5 &      3 &      3 \\
