--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -5,6 +5,8 @@
 \toprule
 {} &     11 &     12 &     13 &     14 &     15 &     16 &     17 &     18 &     19 &     20 \\
 \midrule
+mia & mil & mnz & mun & nov & osl & par & sf & vdb & vdb\\
+\midrule
 TR                            &   2150 &      6 &   1900 &      9 &      7 &      7 &   2300 &   2300 &   2130 &   2300 \\
 TE                            &    3.4 &    3.2 &    2.5 &      4 &    3.2 &    2.9 &      3 &      3 &    2.9 &      3 \\
 Strength                      &      3 &      3 &      3 &      3 &    1.5 &      3 &      3 &      3 &    1.5 &      3 \\
@@ -25,7 +27,7 @@ Hippocampus                   &   0.98 &   0.99 &   0.68 &   0.94 &   0.96 &   0
 Thalamus-Proper               &    0.9 &   0.96 &   0.88 &   0.99 &   0.88 &   0.84 &   0.94 &    0.9 &   0.58 &   0.62 \\
 \bottomrule
 \end{tabular}
-\caption{Top: Acquisition parameters for 9 of the 19 scanners. Si = Siemens, Ph = Phillips. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer.} \textbf{(Same comment as Table 1)}\textit{}
+\caption{Top: Acquisition parameters for 9 of the 19 scanners. Si = Siemens, Ph = Phillips. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. Location abbreviations are: mia = Miami, USA, mil = Milan, Italy, mnz = Mainz, Germany, mun = Munich, Germany, nov = Novara, Italy, osl = Oslo, Norway, par = Paris, France, sf = San Francisco, USA, vdb = Barcelona, Spain} 
 \label{tab:acquisition2}
 
 \end{table}
