--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -5,7 +5,7 @@
 \toprule
 {} &     11 &     12 &     13 &     14 &     15 &     16 &     17 &     18 &     19 &     20 \\
 \midrule
-mia & mil & mnz & mun & nov & osl & par & sf & vdb & vdb\\
+Locations & mia & mil & mnz & mun & nov & osl & par & sf & vdb & vdb\\
 \midrule
 TR                            &   2150 &      6 &   1900 &      9 &      7 &      7 &   2300 &   2300 &   2130 &   2300 \\
 TE                            &    3.4 &    3.2 &    2.5 &      4 &    3.2 &    2.9 &      3 &      3 &    2.9 &      3 \\
