--- a/tab_cva.tex
+++ b/tab_cva.tex
@@ -18,7 +18,6 @@ Hippocampus                   &  0.03 \\
 Thalamus-Proper               &  0.05 \\
 \bottomrule
 \end{tabular}
-\caption{$CV_{\alpha}$ values for selected ROIs}
-\label{tab:cva} \textbf{(I would suggest defining the abbreviation CV - also define all abbreviations used in figures and tables in the legend/key for each)}\textit{}
-
+\caption{Coefficient of variability ($CV_{\alpha}$) values for selected ROIs. $CV_{\alpha}$ was defined in equation \ref{eq:cvadef}}
+\label{tab:cva} 
 \end{table}
