--- a/subsectionProcessing.tex
+++ b/subsectionProcessing.tex
@@ -1,2 +1,2 @@
 \subsection{Processing}
- A neuroradiologist reviewed all images to screen for major artifacts and pathology. The standard Freesurfer\cite{freesurferPaper} version 5.3.0 pipeline was run on each site's native T1-weighted protocol, using the RedHat 7 operating system. All Freesurfer results were quality controlled by evaluating the cortical gray matter segmentation. Scans were excluded from the study if the cortical gray matter segmentation missclassified parts of the cortex. Scans from sites 1,4,6,8,11,13, 16-18 and 20 had no exclusions, while the remaining sites had at most 2 out of 24 exclusions, removing 1-2 subjects from the analysis of that site.  
+ A neuroradiologist reviewed all images to screen for major artifacts and pathology. The standard Freesurfer\cite{freesurferPaper} version 5.3.0 pipeline was run on each site's native T1-weighted protocol, using the RedHat 7 operating system. All Freesurfer results were quality controlled by evaluating the cortical gray matter segmentation. Scans were excluded from the study if the cortical gray matter segmentation missclassified parts of the cortex. Scans from 10 sites had no exclusions, while 1-2 out of 24 scans were excluded from the remaining sites, removing at most 1-2 subjects from the analysis of that site.  
