--- a/figures/WMV/caption.tex
+++ b/figures/WMV/caption.tex
@@ -1,1 +1,1 @@
-\label{fig:hcms_WMV} White matter volume calibration between 2 scanners/sequences at UCSF. The trendline fit shows the slopes (scaling factors) are very close for the healthy control and MS populations
+\label{fig:hcms_WMV} White matter volume (WMV) calibration between 2 scanners/sequences at UCSF. The trendline fit shows the slopes (scaling factors) are very close for the healthy control and MS populations
