--- a/authors.tex
+++ b/authors.tex
@@ -10,6 +10,7 @@ Michael Amann\footnote[13]{University Hospital, Basel, Switzerland},
 Rohit Bakshi\footnote[4]{Brigham and Women's Hospital, MA, United States},
 Antje Bischof\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Manuel Comabella\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
+Jason Crane\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Sandra D’Alfonso\footnote[6]{Eastern Piedmont University, Novara, Italy},
 Benedicte Dubois\footnote[7]{KU Leuven, Leuven, Belgium}
 Massimo Filippi\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
@@ -60,6 +61,7 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 \author[4]{Rohit Bakshi}
 \author[1]{Antje Bischof}
 \author[5]{Manuel Comabella}
+\author[1]{Jason Crane}
 \author[6]{Sandra D’Alfonso}
 \author[7]{Benedicte Dubois}
 \author[8]{Massimo Filippi}
