--- a/authors.tex
+++ b/authors.tex
@@ -37,6 +37,7 @@ Maria Rocca\footnote[8]{Scientific Institute Ospedale San Raffaele, Italy}
 Alex Rovira\footnote[5]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
 Regina Schlaeger\footnote[1]{Neurology, UCSF, San Francisco, CA},
 Till Sprenger\footnote[13]{University Hospital, Basel, Switzerland},
+Alessandro Stecco\footnote[6]{Eastern Piedmont University, Novara, Italy},
 Bernard Uitdehaag\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
 Pablo Villoslada\footnote[14]{IDIBAPS, Barcelona, Spain},
 Mike Wattjies\footnote[16]{Academic Hospital Vrije Universiteit, Netherlands},
@@ -88,6 +89,7 @@ Roland Henry\footnote[1]{Neurology, UCSF, San Francisco, CA}
 \author[5]{Alex Rovira}
 \author[1]{Regina Schlaeger}
 \author[13]{Till Sprenger} %somewhere else
+\author[6]{Alessandro Stecco}
 \author[16]{Bernard Uitdehaag}
 \author[14]{Pablo Villoslada}
 \author[13]{Mike Wattjies}
