--- a/subsection_Scaling_Factor_Prediction_An__.tex
+++ b/subsection_Scaling_Factor_Prediction_An__.tex
@@ -3,5 +3,5 @@
 An ordinary least squares model was run to examine whether protocol parameters of a particular site, such as repetition time (TR), inversion time (TI), echo time (TE), flip angle, field strength, and scanner make can predict the scaling factors of each ROI from that site. This would be particularly useful for multisite studies that cannot scan the same set of subjects at each site. Because gradient distortion and contrast will vary by location, we expected that the relative importance of the protocol parameters would vary by ROI. The p-value for the F-statistic of the model for each ROI was Bonferoni corrected at a false positive rate of 0.05 for 133 comparisons, which resulted in an uncorrected p-value threshold of 0.000376. In out set of protocols, inversion time was highly correlated with repetition time. The model was defined as
 
 \begin{equation}
-\hat{\alpha}_{ROI,site} \sim 1 + TR + TE + Make + Strength + FlipAngle
+\hat{\alpha}_{ROI,site j} \sim 1 + TR_j + TE_j + Make_j + Strength_j + FlipAngle_j
 \end{equation}
