--- a/begin_tabular_lrrrrrrrrrrrrrr_toprule_R2__.tex
+++ b/begin_tabular_lrrrrrrrrrrrrrr_toprule_R2__.tex
@@ -1,19 +1,20 @@
+
 \begin{tabular}{lrrrrrrrrrrrrrr}
 \toprule
-{} &        R2 &  Strength\_p &  FlipAngle\_p &      TR\_p &   Intercept\_p &  Make[T.Ph]\_p &  Make[T.Si]\_p &      TE\_p &       F\_p &       CVa &        WI &    WI\_cal &        BW &    BW\_cal \\
+{} &   R2 &  Strength\_p &  FlipAngle\_p &     TR\_p &  Intercept\_p &  Make[T.Ph]\_p &  Make[T.Si]\_p &     TE\_p &      F\_p &  CVa &   WI &  WI\_cal &   BW &  BW\_cal \\
 \midrule
-variable                           &           &             &              &           &               &               &               &           &           &           &           &           &           &           \\
-Accumbens-area                     &  0.863041 &    0.557144 &     0.100992 &  0.000065 &  2.325845e-03 &      0.096794 &      0.000019 &  0.087882 &  0.000144 &  0.140329 &  0.926907 &  0.838625 &  0.319300 &  0.652466 \\
-Amygdala                           &  0.853875 &    0.002518 &     0.452057 &  0.001420 &  4.753878e-04 &      0.040181 &      0.001976 &  0.465241 &  0.000209 &  0.071472 &  0.930522 &  0.911674 &  0.629836 &  0.816091 \\
-Inf-Lat-Vent                       &  0.868852 &    0.012776 &     0.001571 &  0.006223 &  8.433595e-05 &      0.585687 &      0.007444 &  0.833124 &  0.000112 &  0.157950 &  0.900414 &  0.886379 &  0.740544 &  0.828276 \\
-Putamen                            &  0.838847 &    0.670062 &     0.190674 &  0.000122 &  2.821157e-04 &      0.479345 &      0.000067 &  0.054403 &  0.000365 &  0.077019 &  0.893020 &  0.818227 &  0.459655 &  0.727298 \\
-frontalpole\_thickness              &  0.883194 &    0.854412 &     0.004474 &  0.000735 &  6.203344e-09 &      0.783679 &      0.001088 &  0.023181 &  0.000058 &  0.035347 &  0.860718 &  0.824718 &  0.560531 &  0.668963 \\
-frontalpole\_volume                 &  0.873826 &    0.813344 &     0.020644 &  0.007117 &  8.336343e-06 &      0.143224 &      0.016119 &  0.156782 &  0.000090 &  0.065461 &  0.870085 &  0.846996 &  0.685345 &  0.781565 \\
-fusiform\_thickness                 &  0.903337 &    0.000079 &     0.013435 &  0.019979 &  3.434901e-10 &      0.727933 &      0.013839 &  0.000166 &  0.000019 &  0.029647 &  0.926500 &  0.897939 &  0.569544 &  0.766520 \\
-lateralorbitofrontal\_thickness     &  0.863473 &    0.004046 &     0.000329 &  0.002665 &  1.982624e-08 &      0.180225 &      0.003982 &  0.087534 &  0.000141 &  0.030346 &  0.887126 &  0.850576 &  0.508033 &  0.681269 \\
-medialorbitofrontal\_thickness      &  0.898700 &    0.242733 &     0.001523 &  0.008604 &  2.598333e-07 &      0.956751 &      0.021898 &  0.796948 &  0.000025 &  0.044784 &  0.893844 &  0.799248 &  0.304353 &  0.576520 \\
-parahippocampal\_volume             &  0.890970 &    0.005005 &     0.817976 &  0.001761 &  3.232763e-07 &      0.265246 &      0.002484 &  0.004622 &  0.000039 &  0.055656 &  0.937544 &  0.916643 &  0.712872 &  0.865636 \\
-posteriorcingulate\_thickness       &  0.841268 &    0.004099 &     0.004687 &  0.006200 &  7.452051e-09 &      0.563389 &      0.007501 &  0.539584 &  0.000334 &  0.026060 &  0.751718 &  0.680301 &  0.426993 &  0.570136 \\
-rostralanteriorcingulate\_thickness &  0.839648 &    0.109972 &     0.012782 &  0.001618 &  9.513081e-08 &      0.391154 &      0.005480 &  0.200758 &  0.000354 &  0.035487 &  0.809867 &  0.750056 &  0.473676 &  0.618345 \\
+variable                           &      &             &              &          &              &               &               &          &          &      &      &         &      &         \\
+Accumbens-area                     &  0.9 &     5.6e-01 &      1.0e-01 &  6.5e-05 &      2.3e-03 &           0.1 &       1.9e-05 &  8.8e-02 &  1.4e-04 &  0.1 &  0.9 &     0.8 &  0.3 &     0.7 \\
+Amygdala                           &  0.9 &     2.5e-03 &      4.5e-01 &  1.4e-03 &      4.8e-04 &           0.0 &       2.0e-03 &  4.7e-01 &  2.1e-04 &  0.1 &  0.9 &     0.9 &  0.6 &     0.8 \\
+Inf-Lat-Vent                       &  0.9 &     1.3e-02 &      1.6e-03 &  6.2e-03 &      8.4e-05 &           0.6 &       7.4e-03 &  8.3e-01 &  1.1e-04 &  0.2 &  0.9 &     0.9 &  0.7 &     0.8 \\
+Putamen                            &  0.8 &     6.7e-01 &      1.9e-01 &  1.2e-04 &      2.8e-04 &           0.5 &       6.7e-05 &  5.4e-02 &  3.6e-04 &  0.1 &  0.9 &     0.8 &  0.5 &     0.7 \\
+frontalpole\_thickness              &  0.9 &     8.5e-01 &      4.5e-03 &  7.3e-04 &      6.2e-09 &           0.8 &       1.1e-03 &  2.3e-02 &  5.8e-05 &  0.0 &  0.9 &     0.8 &  0.6 &     0.7 \\
+frontalpole\_volume                 &  0.9 &     8.1e-01 &      2.1e-02 &  7.1e-03 &      8.3e-06 &           0.1 &       1.6e-02 &  1.6e-01 &  9.0e-05 &  0.1 &  0.9 &     0.8 &  0.7 &     0.8 \\
+fusiform\_thickness                 &  0.9 &     7.9e-05 &      1.3e-02 &  2.0e-02 &      3.4e-10 &           0.7 &       1.4e-02 &  1.7e-04 &  1.9e-05 &  0.0 &  0.9 &     0.9 &  0.6 &     0.8 \\
+lateralorbitofrontal\_thickness     &  0.9 &     4.0e-03 &      3.3e-04 &  2.7e-03 &      2.0e-08 &           0.2 &       4.0e-03 &  8.8e-02 &  1.4e-04 &  0.0 &  0.9 &     0.9 &  0.5 &     0.7 \\
+medialorbitofrontal\_thickness      &  0.9 &     2.4e-01 &      1.5e-03 &  8.6e-03 &      2.6e-07 &           1.0 &       2.2e-02 &  8.0e-01 &  2.5e-05 &  0.0 &  0.9 &     0.8 &  0.3 &     0.6 \\
+parahippocampal\_volume             &  0.9 &     5.0e-03 &      8.2e-01 &  1.8e-03 &      3.2e-07 &           0.3 &       2.5e-03 &  4.6e-03 &  3.9e-05 &  0.1 &  0.9 &     0.9 &  0.7 &     0.9 \\
+posteriorcingulate\_thickness       &  0.8 &     4.1e-03 &      4.7e-03 &  6.2e-03 &      7.5e-09 &           0.6 &       7.5e-03 &  5.4e-01 &  3.3e-04 &  0.0 &  0.8 &     0.7 &  0.4 &     0.6 \\
+rostralanteriorcingulate\_thickness &  0.8 &     1.1e-01 &      1.3e-02 &  1.6e-03 &      9.5e-08 &           0.4 &       5.5e-03 &  2.0e-01 &  3.5e-04 &  0.0 &  0.8 &     0.8 &  0.5 &     0.6 \\
 \bottomrule
 \end{tabular}
