--- a/begin_tabular_lrrrrrrrrrrrrrr_toprule_R2__.tex
+++ b/begin_tabular_lrrrrrrrrrrrrrr_toprule_R2__.tex
@@ -1,20 +1,23 @@
-
+\begin{table}
 \begin{tabular}{lrrrrrrrrrrrrrr}
 \toprule
-{} &   R2 &  Strength\_p &  FlipAngle\_p &     TR\_p &  Intercept\_p &  Make[T.Ph]\_p &  Make[T.Si]\_p &     TE\_p &      F\_p &  CVa &   WI &  WI\_cal &   BW &  BW\_cal \\
+{} &    R2 &  Strength\_p &  FlipAngle\_p &      TR\_p &  Intercept\_p &  Make[T.Ph]\_p &  Make[T.Si]\_p &      TE\_p &       F\_p &   CVa &    WI &  WI\_cal &    BW &  BW\_cal \\
 \midrule
-variable                           &      &             &              &          &              &               &               &          &          &      &      &         &      &         \\
-Accumbens-area                     &  0.9 &     5.6e-01 &      1.0e-01 &  6.5e-05 &      2.3e-03 &           0.1 &       1.9e-05 &  8.8e-02 &  1.4e-04 &  0.1 &  0.9 &     0.8 &  0.3 &     0.7 \\
-Amygdala                           &  0.9 &     2.5e-03 &      4.5e-01 &  1.4e-03 &      4.8e-04 &           0.0 &       2.0e-03 &  4.7e-01 &  2.1e-04 &  0.1 &  0.9 &     0.9 &  0.6 &     0.8 \\
-Inf-Lat-Vent                       &  0.9 &     1.3e-02 &      1.6e-03 &  6.2e-03 &      8.4e-05 &           0.6 &       7.4e-03 &  8.3e-01 &  1.1e-04 &  0.2 &  0.9 &     0.9 &  0.7 &     0.8 \\
-Putamen                            &  0.8 &     6.7e-01 &      1.9e-01 &  1.2e-04 &      2.8e-04 &           0.5 &       6.7e-05 &  5.4e-02 &  3.6e-04 &  0.1 &  0.9 &     0.8 &  0.5 &     0.7 \\
-frontalpole\_thickness              &  0.9 &     8.5e-01 &      4.5e-03 &  7.3e-04 &      6.2e-09 &           0.8 &       1.1e-03 &  2.3e-02 &  5.8e-05 &  0.0 &  0.9 &     0.8 &  0.6 &     0.7 \\
-frontalpole\_volume                 &  0.9 &     8.1e-01 &      2.1e-02 &  7.1e-03 &      8.3e-06 &           0.1 &       1.6e-02 &  1.6e-01 &  9.0e-05 &  0.1 &  0.9 &     0.8 &  0.7 &     0.8 \\
-fusiform\_thickness                 &  0.9 &     7.9e-05 &      1.3e-02 &  2.0e-02 &      3.4e-10 &           0.7 &       1.4e-02 &  1.7e-04 &  1.9e-05 &  0.0 &  0.9 &     0.9 &  0.6 &     0.8 \\
-lateralorbitofrontal\_thickness     &  0.9 &     4.0e-03 &      3.3e-04 &  2.7e-03 &      2.0e-08 &           0.2 &       4.0e-03 &  8.8e-02 &  1.4e-04 &  0.0 &  0.9 &     0.9 &  0.5 &     0.7 \\
-medialorbitofrontal\_thickness      &  0.9 &     2.4e-01 &      1.5e-03 &  8.6e-03 &      2.6e-07 &           1.0 &       2.2e-02 &  8.0e-01 &  2.5e-05 &  0.0 &  0.9 &     0.8 &  0.3 &     0.6 \\
-parahippocampal\_volume             &  0.9 &     5.0e-03 &      8.2e-01 &  1.8e-03 &      3.2e-07 &           0.3 &       2.5e-03 &  4.6e-03 &  3.9e-05 &  0.1 &  0.9 &     0.9 &  0.7 &     0.9 \\
-posteriorcingulate\_thickness       &  0.8 &     4.1e-03 &      4.7e-03 &  6.2e-03 &      7.5e-09 &           0.6 &       7.5e-03 &  5.4e-01 &  3.3e-04 &  0.0 &  0.8 &     0.7 &  0.4 &     0.6 \\
-rostralanteriorcingulate\_thickness &  0.8 &     1.1e-01 &      1.3e-02 &  1.6e-03 &      9.5e-08 &           0.4 &       5.5e-03 &  2.0e-01 &  3.5e-04 &  0.0 &  0.8 &     0.8 &  0.5 &     0.6 \\
+variable                           &       &             &              &           &              &               &               &           &           &       &       &         &       &         \\
+Accumbens-area                     &  0.86 &    5.57e-01 &     1.01e-01 &  6.55e-05 &     2.33e-03 &          0.10 &      1.86e-05 &  8.79e-02 &  1.44e-04 &  0.14 &  0.93 &    0.84 &  0.32 &    0.65 \\
+Amygdala                           &  0.85 &    2.52e-03 &     4.52e-01 &  1.42e-03 &     4.75e-04 &          0.04 &      1.98e-03 &  4.65e-01 &  2.09e-04 &  0.07 &  0.93 &    0.91 &  0.63 &    0.82 \\
+Inf-Lat-Vent                       &  0.87 &    1.28e-02 &     1.57e-03 &  6.22e-03 &     8.43e-05 &          0.59 &      7.44e-03 &  8.33e-01 &  1.12e-04 &  0.16 &  0.90 &    0.89 &  0.74 &    0.83 \\
+Putamen                            &  0.84 &    6.70e-01 &     1.91e-01 &  1.22e-04 &     2.82e-04 &          0.48 &      6.69e-05 &  5.44e-02 &  3.65e-04 &  0.08 &  0.89 &    0.82 &  0.46 &    0.73 \\
+frontalpole\_thickness              &  0.88 &    8.54e-01 &     4.47e-03 &  7.35e-04 &     6.20e-09 &          0.78 &      1.09e-03 &  2.32e-02 &  5.76e-05 &  0.04 &  0.86 &    0.82 &  0.56 &    0.67 \\
+frontalpole\_volume                 &  0.87 &    8.13e-01 &     2.06e-02 &  7.12e-03 &     8.34e-06 &          0.14 &      1.61e-02 &  1.57e-01 &  8.99e-05 &  0.07 &  0.87 &    0.85 &  0.69 &    0.78 \\
+fusiform\_thickness                 &  0.90 &    7.95e-05 &     1.34e-02 &  2.00e-02 &     3.43e-10 &          0.73 &      1.38e-02 &  1.66e-04 &  1.92e-05 &  0.03 &  0.93 &    0.90 &  0.57 &    0.77 \\
+lateralorbitofrontal\_thickness     &  0.86 &    4.05e-03 &     3.29e-04 &  2.67e-03 &     1.98e-08 &          0.18 &      3.98e-03 &  8.75e-02 &  1.41e-04 &  0.03 &  0.89 &    0.85 &  0.51 &    0.68 \\
+medialorbitofrontal\_thickness      &  0.90 &    2.43e-01 &     1.52e-03 &  8.60e-03 &     2.60e-07 &          0.96 &      2.19e-02 &  7.97e-01 &  2.52e-05 &  0.04 &  0.89 &    0.80 &  0.30 &    0.58 \\
+parahippocampal\_volume             &  0.89 &    5.00e-03 &     8.18e-01 &  1.76e-03 &     3.23e-07 &          0.27 &      2.48e-03 &  4.62e-03 &  3.87e-05 &  0.06 &  0.94 &    0.92 &  0.71 &    0.87 \\
+posteriorcingulate\_thickness       &  0.84 &    4.10e-03 &     4.69e-03 &  6.20e-03 &     7.45e-09 &          0.56 &      7.50e-03 &  5.40e-01 &  3.34e-04 &  0.03 &  0.75 &    0.68 &  0.43 &    0.57 \\
+rostralanteriorcingulate\_thickness &  0.84 &    1.10e-01 &     1.28e-02 &  1.62e-03 &     9.51e-08 &          0.39 &      5.48e-03 &  2.01e-01 &  3.54e-04 &  0.04 &  0.81 &    0.75 &  0.47 &    0.62 \\
 \bottomrule
 \end{tabular}
+\label{tab:alpha_predict}
+\caption{This table shows the scaling factor ($\hat{\alpha}$)  prediction results via ordinary least squares. The ROIs shown are those that remain after Bonferroni correction on the F statistic for the model.  }
+\end{table}
