--- a/begin_table_begin_tabular_lrrrrrrrrrrrrrr__.tex
+++ b/begin_table_begin_tabular_lrrrrrrrrrrrrrr__.tex
@@ -1,7 +1,7 @@
 \begin{table}
 \begin{tabular}{lrrrrrrrrrrrrrr}
 \toprule
-{} &    R2 &  Strength\_p &  FlipAngle\_p &      TR\_p &  Intercept\_p &  Make[T.Ph]\_p &  Make[T.Si]\_p &      TE\_p &       F\_p &   CVa &    WI &  WI\_cal &    BW &  BW\_cal \\
+{} &    $R^2$ &  $p_{Str}$ &  p_{FA} &      $p_{TR}$ &  $p_{Int}$ &  $p_{Ph}$ &  $p_{Si}$ &      $p_TE$ &       $p_F$ &   $CV_{\alpha}$ &    WI &  $WI_{cal}$ &    BW &  $BW_{cal}$ \\
 \midrule
 variable                           &       &             &              &           &              &               &               &           &           &       &       &         &       &         \\
 Accumbens-area                     &  0.86 &    5.57e-01 &     1.01e-01 &  6.55e-05 &     2.33e-03 &          0.10 &      1.86e-05 &  8.79e-02 &  1.44e-04 &  0.14 &  0.93 &    0.84 &  0.32 &    0.65 \\
