--- a/begin_table_begin_tabular_lrrrrrrrrrrrrrr__.tex
+++ b/begin_table_begin_tabular_lrrrrrrrrrrrrrr__.tex
@@ -1,7 +1,7 @@
 \begin{table}
 \begin{tabular}{lrrrrrrrrrrrrrr}
 \toprule
-{} &    $R^2$ &  $p_{Str}$ &  p_{FA} &      $p_{TR}$ &  $p_{Int}$ &  $p_{Ph}$ &  $p_{Si}$ &      $p_TE$ &       $p_F$ &   $CV_{\alpha}$ &    WI &  $WI_{cal}$ &    BW &  $BW_{cal}$ \\
+{} &    $R^2$ &  $p_{Str}$ &  $p_{FA}$ &      $p_{TR}$ &  $p_{Int}$ &  $p_{Ph}$ &  $p_{Si}$ &      $p_TE$ &       $p_F$ &   $CV_{\alpha}$ &    $WI$ &  $WI_{cal}$ &    $BW$ &  $BW_{cal}$ \\
 \midrule
 variable                           &       &             &              &           &              &               &               &           &           &       &       &         &       &         \\
 Accumbens-area                     &  0.86 &    5.57e-01 &     1.01e-01 &  6.55e-05 &     2.33e-03 &          0.10 &      1.86e-05 &  8.79e-02 &  1.44e-04 &  0.14 &  0.93 &    0.84 &  0.32 &    0.65 \\
@@ -19,5 +19,5 @@ rostralanteriorcingulate\_thickness &  0.84 &    1.10e-01 &     1.28e-02 &  1.62
 \bottomrule
 \end{tabular}
 \label{tab:alpha_predict}
-\caption{This table shows the scaling factor ($\hat{\alpha}$)  prediction results via ordinary least squares. The ROIs shown are those that remain after Bonferroni correction on the F statistic for the model.  }
+\caption{This table shows the scaling factor ($\hat{\alpha}$)  prediction results via ordinary least squares. The ROIs shown are those that remain after Bonferroni correction on the F statistic for the model. The columns are the p values for the coefficients on magnetic field strength (Str), flip angle (FA), repetition time (TR), intercept (Int), Phillips scanner make (Ph), Siemens scanner make (Si), and echo time (TE), along with the coefficient of variability of scaling factors ($CV_\alpha$} and the within- (WI) and between- (BW) site ICCs before and after calibration.
 \end{table}
