--- a/begin_table_begin_tabular_lrrrrrrrrrrrrrr__.tex
+++ b/begin_table_begin_tabular_lrrrrrrrrrrrrrr__.tex
@@ -1,4 +1,5 @@
 \begin{table}
+\centering
 \begin{tabular}{lrrrrrrrrrrrrrr}
 \toprule
 {} &    $R^2$ &  $p_{Str}$ &  $p_{FA}$ &      $p_{TR}$ &  $p_{Int}$ &  $p_{Ph}$ &  $p_{Si}$ &      $p_TE$ &       $p_F$ &   $CV_{\alpha}$ &    $WI$ &  $WI_{cal}$ &    $BW$ &  $BW_{cal}$ \\
