--- a/begin_table_centering_begin_tabular__.tex
+++ b/begin_table_centering_begin_tabular__.tex
@@ -5,7 +5,7 @@
 \toprule
 {ROI} &    $R^2$ &  $p_{Str}$ &  $p_{FA}$ &      $p_{TR}$ &  $p_{Int}$ &  $p_{Ph}$ &  $p_{Si}$ &      $p_{TE}$ &       $p_F$ &   $CV_{\alpha}$ &    $WI$ &  $WI_{cal}$ &    $BW$ &  $BW_{cal}$ \\
 \midrule
-Accumbens-area                     &  0.86 &    5.57e-01 &     1.01e-01 &  6.55e-05 &     2.33e-03 &          0.10 &      1.86e-05 &  8.79e-02 &  1.44e-04 &  0.14 &  0.93 &    0.84 &  0.32 &    0.65 \\
+Accumbens                     &  0.86 &    5.57e-01 &     1.01e-01 &  6.55e-05 &     2.33e-03 &          0.10 &      1.86e-05 &  8.79e-02 &  1.44e-04 &  0.14 &  0.93 &    0.84 &  0.32 &    0.65 \\
 Amygdala                           &  0.85 &    2.52e-03 &     4.52e-01 &  1.42e-03 &     4.75e-04 &          0.04 &      1.98e-03 &  4.65e-01 &  2.09e-04 &  0.07 &  0.93 &    0.91 &  0.63 &    0.82 \\
 Inf-Lat-Vent                       &  0.87 &    1.28e-02 &     1.57e-03 &  6.22e-03 &     8.43e-05 &          0.59 &      7.44e-03 &  8.33e-01 &  1.12e-04 &  0.16 &  0.90 &    0.89 &  0.74 &    0.83 \\
 Putamen                            &  0.84 &    6.70e-01 &     1.91e-01 &  1.22e-04 &     2.82e-04 &          0.48 &      6.69e-05 &  5.44e-02 &  3.65e-04 &  0.08 &  0.89 &    0.82 &  0.46 &    0.73 \\
